add new controlle for citizen
